[gd_scene load_steps=3 format=3 uid="uid://7tcl54ibhdyd"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_qopo3"]
[ext_resource type="PackedScene" uid="uid://hfpaouxmxtmv" path="res://prefabs/next.tscn" id="2_fmp70"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qopo3")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.12549, 0.12549, 0.756863)

[node name="MainMenu" parent="." instance=ExtResource("2_fmp70")]
process_mode = 3
anchors_preset = -1
anchor_left = 0.201
anchor_top = 0.605
anchor_right = 0.375
anchor_bottom = 0.682
offset_left = 8.448
offset_top = -0.0400085
offset_right = 7.99997
offset_bottom = 0.0639648
text = "MAIN MENU"

[node name="LevelSelect" parent="." instance=ExtResource("2_fmp70")]
process_mode = 3
anchors_preset = -1
anchor_left = 0.403
anchor_top = 0.605
anchor_right = 0.576
anchor_bottom = 0.682
offset_left = 7.74396
offset_top = -0.0400085
offset_right = 8.44794
offset_bottom = 0.0639648
text = "LEVEL SELECT"

[node name="ResumeLevel" parent="." instance=ExtResource("2_fmp70")]
process_mode = 3
anchors_preset = -1
anchor_left = 0.604
anchor_top = 0.605
anchor_right = 0.778
anchor_bottom = 0.682
offset_left = 8.19202
offset_top = -0.0400085
offset_right = 7.74402
offset_bottom = 0.0639648
text = "RESUME"

[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="ResumeLevel" to="." method="_on_resume_level_pressed"]
